--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@
             password: ${{ secrets.SSH_PASSWORD }}
             port: ${{ secrets.SSH_PORT }}
             script: |
-              cd ~/home/forumapi
+              cd /home/forumapi
               git pull origin master
               docker compose down
               docker compose up -d --build
